updated box plot title

--- a/Pymaceuticals/pymaceuticals_homework.ipynb
+++ b/Pymaceuticals/pymaceuticals_homework.ipynb
@@ -1599,9 +1599,9 @@
     "    box_plot.append(list(greatest_tumor_copy[drug].dropna()))\n",
     "\n",
     "fig1, ax = plt.subplots(figsize=(9,7))\n",
-    "ax.set_title('Final tumor volume of each mouse across treatment regimens')\n",
+    "ax.set_title('Final Tumor Volume of Each Mouse Across Treatments')\n",
     "ax.set_xlabel('Drug Regimen')\n",
-    "ax.set_ylabel('Tumor Vol (mm3)')\n",
+    "ax.set_ylabel('Tumor Volume (mm3)')\n",
     "ax.boxplot(box_plot,notch=0)\n",
     "plt.xticks([1,2,3,4],drug_list)\n",
     "\n",
